--- a/SimpleWeather/app/src/main/AndroidManifest.xml
+++ b/SimpleWeather/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.SimpleWeather.NoActionBar"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
